--- a/index.html
+++ b/index.html
@@ -291,7 +291,9 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="card__blur"></div>
+                                <div class="card__blur">
+                                    <img src="img/brands-1-blur.png" alt="">
+                                </div>
                             </div>
                             <div class="card second">
                                 <div class="card__content">
@@ -313,7 +315,9 @@
                                             at the best prices and generate passive income while playing</p>
                                     </div>
                                 </div>
-                                <div class="card__blur"></div>
+                                <div class="card__blur">
+                                    <img src="img/brands-2-blur.png" alt="">
+                                </div>
                             </div>
                             <div class="card third">
                                 <div class="card__content">
@@ -332,14 +336,18 @@
                                             could cater to the demands of the game.</p>
                                     </div>
                                 </div>
-                                <div class="card__blur"></div>
+                                <div class="card__blur">
+                                    <img src="img/brands-3-blur.png" alt="">
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
             <section class="our-resources" id="resources">
-                <div class="our-resources__blur"></div>
+                <div class="our-resources__blur">
+                    <img src="img/resources-blur.png" alt="">
+                </div>
                 <div class="container">
                     <div class="our-resources__content">
                         <div class="our-resources__head">
@@ -451,19 +459,19 @@
                             </svg>
                         </p>
                         <p>CRAFTY METAVERSE <svg xmlns="http://www.w3.org/2000/svg" width="55" height="56"
-                            viewBox="0 0 55 56" fill="none">
-                            <path
-                                d="M22.544 5.40518L29.6488 24.115L49.649 23.3864L30.9391 30.4912L31.6678 50.4913L24.563 31.7815L4.56283 32.5101L23.2727 25.4053L22.544 5.40518Z"
-                                fill="white" />
-                        </svg>
-                    </p>
-                    <p>CRAFTY METAVERSE <svg xmlns="http://www.w3.org/2000/svg" width="55" height="56"
-                        viewBox="0 0 55 56" fill="none">
-                        <path
-                            d="M22.544 5.40518L29.6488 24.115L49.649 23.3864L30.9391 30.4912L31.6678 50.4913L24.563 31.7815L4.56283 32.5101L23.2727 25.4053L22.544 5.40518Z"
-                            fill="white" />
-                    </svg>
-                </p>
+                                viewBox="0 0 55 56" fill="none">
+                                <path
+                                    d="M22.544 5.40518L29.6488 24.115L49.649 23.3864L30.9391 30.4912L31.6678 50.4913L24.563 31.7815L4.56283 32.5101L23.2727 25.4053L22.544 5.40518Z"
+                                    fill="white" />
+                            </svg>
+                        </p>
+                        <p>CRAFTY METAVERSE <svg xmlns="http://www.w3.org/2000/svg" width="55" height="56"
+                                viewBox="0 0 55 56" fill="none">
+                                <path
+                                    d="M22.544 5.40518L29.6488 24.115L49.649 23.3864L30.9391 30.4912L31.6678 50.4913L24.563 31.7815L4.56283 32.5101L23.2727 25.4053L22.544 5.40518Z"
+                                    fill="white" />
+                            </svg>
+                        </p>
                         <p>CRAFTY METAVERSE <svg xmlns="http://www.w3.org/2000/svg" width="55" height="56"
                                 viewBox="0 0 55 56" fill="none">
                                 <path
@@ -574,7 +582,9 @@
                 </div>
             </section>
             <section class="explore-and-virtual" id="explore">
-                <div class="explore-and-virtual__blur"></div>
+                <div class="explore-and-virtual__blur">
+                    <img src="img/explore-blur.png" alt="">
+                </div>
                 <div class="container">
                     <div class="explore-and-virtual__content">
                         <div class="explore">
@@ -876,85 +886,81 @@
                     <div class="blurs__second"></div>
                 </div>
                 <div class="container">
-                    <div class="fqa__wrapper">
-                        <div class="faq__border">
-                            <div class="fqa__container">
-                                <div class="faq__content">
-                                    <div class="faq__head">
-                                        <h3 class="faq___subtitle subtitle">
-                                            Questions
-                                        </h3>
-                                        <h2 class="faq__title title">
-                                            faq
-                                        </h2>
+                    <div class="faq__border">
+                        <div class="faq__content">
+                            <div class="faq__head">
+                                <h3 class="faq___subtitle subtitle">
+                                    Questions
+                                </h3>
+                                <h2 class="faq__title title">
+                                    faq
+                                </h2>
+                            </div>
+                            <div class="faq__info">
+                                <div class="faq__question active">
+                                    <div class="question">
+                                        <p>1. What is CMETA and which tokens we use? </p>
                                     </div>
-                                    <div class="faq__info">
-                                        <div class="faq__question active">
-                                            <div class="question">
-                                                <p>1. What is CMETA and which tokens we use? </p>
-                                            </div>
-                                            <div class="answer">Crafty Metaverse is a blockchain-based virtual reality
-                                                metaverse
-                                                platform focused on building a decentralized, persistent online 3D/VR
-                                                environment that will allow interactions among humans in the form of
-                                                Avatars.
-                                            </div>
-                                        </div>
-                                        <div class="faq__question">
-                                            <div class="question">
-                                                <p>2. What is CMETA and which tokens we use? </p>
-                                            </div>
-                                            <div class="answer">Crafty Metaverse is a blockchain-based virtual reality
-                                                metaverse
-                                                platform focused on building a decentralized, persistent online 3D/VR
-                                                environment that will allow interactions among humans in the form of
-                                                Avatars.
-                                            </div>
-                                        </div>
-                                        <div class="faq__question">
-                                            <div class="question">
-                                                <p>3. What is CMETA and which tokens we use? </p>
-                                            </div>
-                                            <div class="answer">Crafty Metaverse is a blockchain-based virtual reality
-                                                metaverse
-                                                platform focused on building a decentralized, persistent online 3D/VR
-                                                environment that will allow interactions among humans in the form of
-                                                Avatars.
-                                            </div>
-                                        </div>
-                                        <div class="faq__question">
-                                            <div class="question">
-                                                <p>4. What is CMETA and which tokens we use? </p>
-                                            </div>
-                                            <div class="answer">Crafty Metaverse is a blockchain-based virtual reality
-                                                metaverse
-                                                platform focused on building a decentralized, persistent online 3D/VR
-                                                environment that will allow interactions among humans in the form of
-                                                Avatars.
-                                            </div>
-                                        </div>
-                                        <div class="faq__question">
-                                            <div class="question">
-                                                <p>5. What is CMETA and which tokens we use? </p>
-                                            </div>
-                                            <div class="answer">Crafty Metaverse is a blockchain-based virtual reality
-                                                metaverse
-                                                platform focused on building a decentralized, persistent online 3D/VR
-                                                environment that will allow interactions among humans in the form of
-                                                Avatars.
-                                            </div>
-                                        </div>
-                                        <div class="faq__question">
-                                            <div class="question">
-                                                <p>6. What is CMETA and which tokens we use? </p>
-                                            </div>
-                                            <div class="answer">Crafty Metaverse is a blockchain-based virtual reality
-                                                metaverse
-                                                platform focused on building a decentralized, persistent online 3D/VR
-                                                environment that will allow interactions among humans in the form of
-                                                Avatars.
-                                            </div>
-                                        </div>
+                                    <div class="answer">Crafty Metaverse is a blockchain-based virtual reality
+                                        metaverse
+                                        platform focused on building a decentralized, persistent online 3D/VR
+                                        environment that will allow interactions among humans in the form of
+                                        Avatars.
+                                    </div>
+                                </div>
+                                <div class="faq__question">
+                                    <div class="question">
+                                        <p>2. What is CMETA and which tokens we use? </p>
+                                    </div>
+                                    <div class="answer">Crafty Metaverse is a blockchain-based virtual reality
+                                        metaverse
+                                        platform focused on building a decentralized, persistent online 3D/VR
+                                        environment that will allow interactions among humans in the form of
+                                        Avatars.
+                                    </div>
+                                </div>
+                                <div class="faq__question">
+                                    <div class="question">
+                                        <p>3. What is CMETA and which tokens we use? </p>
+                                    </div>
+                                    <div class="answer">Crafty Metaverse is a blockchain-based virtual reality
+                                        metaverse
+                                        platform focused on building a decentralized, persistent online 3D/VR
+                                        environment that will allow interactions among humans in the form of
+                                        Avatars.
+                                    </div>
+                                </div>
+                                <div class="faq__question">
+                                    <div class="question">
+                                        <p>4. What is CMETA and which tokens we use? </p>
+                                    </div>
+                                    <div class="answer">Crafty Metaverse is a blockchain-based virtual reality
+                                        metaverse
+                                        platform focused on building a decentralized, persistent online 3D/VR
+                                        environment that will allow interactions among humans in the form of
+                                        Avatars.
+                                    </div>
+                                </div>
+                                <div class="faq__question">
+                                    <div class="question">
+                                        <p>5. What is CMETA and which tokens we use? </p>
+                                    </div>
+                                    <div class="answer">Crafty Metaverse is a blockchain-based virtual reality
+                                        metaverse
+                                        platform focused on building a decentralized, persistent online 3D/VR
+                                        environment that will allow interactions among humans in the form of
+                                        Avatars.
+                                    </div>
+                                </div>
+                                <div class="faq__question">
+                                    <div class="question">
+                                        <p>6. What is CMETA and which tokens we use? </p>
+                                    </div>
+                                    <div class="answer">Crafty Metaverse is a blockchain-based virtual reality
+                                        metaverse
+                                        platform focused on building a decentralized, persistent online 3D/VR
+                                        environment that will allow interactions among humans in the form of
+                                        Avatars.
                                     </div>
                                 </div>
                             </div>
