--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="about-us__img">
                     <picture>
                         <source srcset="img/about-us-bg.webp" type="webp" />
-                        <img src="img/about-us-bg.jpg" alt="people" loading="lazy">
+                        <img src="img/about-us-bg.jpg" type="jpg" alt="people" loading="lazy">
                     </picture>
                 </div>
                 <div class="about-us__bg"></div>
@@ -269,7 +269,7 @@
                                     <div class="card__img">
                                         <picture>
                                             <source srcset="img/brands-1.webp" type="webp" />
-                                            <img src="img/brands-1.png" alt="brand-1" loading="lazy">
+                                            <img src="img/brands-1.png" type="png" alt="brand-1" loading="lazy">
                                         </picture>
                                         <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46"
                                             viewBox="0 0 46 46" fill="none">
@@ -292,7 +292,10 @@
                                     </div>
                                 </div>
                                 <div class="card__blur">
-                                    <img src="img/brands-1-blur.png" alt="">
+                                    <picture>
+                                        <source srcset="img/brands-1-blur.webp" type="webp" />
+                                        <img src="img/brands-1-blur.png" type="png" alt="brand-1-blur" loading="lazy">
+                                    </picture>
                                 </div>
                             </div>
                             <div class="card second">
@@ -300,7 +303,7 @@
                                     <div class="card__img">
                                         <picture>
                                             <source srcset="img/brands-2.webp" type="webp" />
-                                            <img src="img/brands-2.png" alt="brand-2" loading="lazy">
+                                            <img src="img/brands-2.png" type="png" alt="brand-2" loading="lazy">
                                         </picture>
                                     </div>
                                     <div class="card__info">
@@ -316,7 +319,10 @@
                                     </div>
                                 </div>
                                 <div class="card__blur">
-                                    <img src="img/brands-2-blur.png" alt="">
+                                    <picture>
+                                        <source srcset="img/brands-2-blur.webp" type="webp" />
+                                        <img src="img/brands-2-blur.png" type="png" alt="brand-2-blur" loading="lazy">
+                                    </picture>
                                 </div>
                             </div>
                             <div class="card third">
@@ -324,7 +330,7 @@
                                     <div class="card__img">
                                         <picture>
                                             <source srcset="img/brands-3.webp" type="webp" />
-                                            <img src="img/brands-3.png" alt="brand-3" loading="lazy">
+                                            <img src="img/brands-3.png" type="png" alt="brand-3" loading="lazy">
                                         </picture>
                                     </div>
                                     <div class="card__info">
@@ -337,7 +343,10 @@
                                     </div>
                                 </div>
                                 <div class="card__blur">
-                                    <img src="img/brands-3-blur.png" alt="">
+                                    <picture>
+                                        <source srcset="img/brands-3-blur.webp" type="webp" />
+                                        <img src="img/brands-3-blur.png" type="png" alt="brand-3-blur" loading="lazy">
+                                    </picture>
                                 </div>
                             </div>
                         </div>
@@ -346,7 +355,10 @@
             </section>
             <section class="our-resources" id="resources">
                 <div class="our-resources__blur">
-                    <img src="img/resources-blur.png" alt="">
+                    <picture>
+                        <source srcset="img/resources-blur.webp" type="webp" />
+                        <img src="img/resources-blur.png" type="png" alt="resources-blur" loading="lazy">
+                    </picture>
                 </div>
                 <div class="container">
                     <div class="our-resources__content">
@@ -535,7 +547,7 @@
                 <div class="game__logo">
                     <picture>
                         <source srcset="img/game-logo.webp" type="webp" />
-                        <img src="img/game-logo.png" alt="game" loading="lazy">
+                        <img src="img/game-logo.png" type="png" type="png" alt="game" loading="lazy">
                     </picture>
                 </div>
                 <div class="container">
@@ -543,7 +555,7 @@
                         <div class="game__img_one">
                             <picture>
                                 <source srcset="img/game-1.webp" type="webp" />
-                                <img src="img/game-1.png" alt="game-1" loading="lazy">
+                                <img src="img/game-1.png" type="png" type="png" alt="game-1" loading="lazy">
                             </picture>
                         </div>
                         <div class="game__info">
@@ -575,7 +587,7 @@
                         <div class="game__img_two">
                             <picture>
                                 <source srcset="img/game-2.webp" type="webp" />
-                                <img src="img/game-2.png" alt="game-2" loading="lazy">
+                                <img src="img/game-2.png" type="png" alt="game-2" loading="lazy">
                             </picture>
                         </div>
                     </div>
@@ -583,7 +595,10 @@
             </section>
             <section class="explore-and-virtual" id="explore">
                 <div class="explore-and-virtual__blur">
-                    <img src="img/explore-blur.png" alt="">
+                    <picture>
+                        <source srcset="img/explore-blur.webp" type="webp" />
+                        <img src="img/explore-blur.png" type="png" alt="explore-blur" loading="lazy">
+                    </picture>
                 </div>
                 <div class="container">
                     <div class="explore-and-virtual__content">
@@ -645,14 +660,14 @@
                             <div class="explore__img">
                                 <picture>
                                     <source srcset="img/explore-now.webp" type="webp" />
-                                    <img src="img/explore-now.png" alt="explore" loading="lazy">
+                                    <img src="img/explore-now.png" type="png" alt="explore" loading="lazy">
                                 </picture>
                             </div>
                         </div>
                         <div class="virtual__img">
                             <picture>
                                 <source srcset="img/virtual-atrs.webp" type="webp" />
-                                <img src="img/virtual-atrs.png" loading="lazy">
+                                <img src="img/virtual-atrs.png" type="png" loading="lazy">
                             </picture>
                         </div>
                         <div class="virtual">
@@ -721,10 +736,8 @@
                                 <div class="member__img">
                                     <picture>
                                         <source srcset="img/stan.webp" type="webp" />
-                                        <img src="img/stan.png" alt="stan" loading="lazy">
+                                        <img src="img/stan.png" type="png" alt="stan" loading="lazy">
                                     </picture>
-
-
                                 </div>
                                 <div class="member__info">
                                     <p class="member__job">CTO/Creative Director</p>
@@ -749,7 +762,7 @@
                                 <div class="member__img">
                                     <picture>
                                         <source srcset="img/kwasi.webp" type="webp" />
-                                        <img src="img/kwasi.png" alt="kwasi" loading="lazy">
+                                        <img src="img/kwasi.png" type="png" alt="kwasi" loading="lazy">
                                     </picture>
                                 </div>
                                 <div class="member__info">
@@ -775,7 +788,7 @@
                                 <div class="member__img">
                                     <picture>
                                         <source srcset="img/kwame.webp" type="webp" />
-                                        <img src="img/kwame.png" alt="kweme" loading="lazy">
+                                        <img src="img/kwame.png" type="png" alt="kweme" loading="lazy">
                                     </picture>
                                 </div>
                                 <div class="member__info">
@@ -801,7 +814,7 @@
                                 <div class="member__img">
                                     <picture>
                                         <source srcset="img/kojo.webp" type="webp" />
-                                        <img src="img/kojo.png" alt="kojo" loading="lazy">
+                                        <img src="img/kojo.png" type="png" alt="kojo" loading="lazy">
                                     </picture>
                                 </div>
                                 <div class="member__info">
@@ -993,7 +1006,7 @@
                             <a href="https://twitter.com/">
                                 <picture>
                                     <source srcset="img/tw.webp" type="webp" />
-                                    <img src="img/tw.png" alt="tw" loading="lazy">
+                                    <img src="img/tw.png" type="png" alt="tw" loading="lazy">
                                 </picture>
                             </a>
                         </div>
@@ -1001,7 +1014,7 @@
                             <a href="https://web.telegram.org/a/">
                                 <picture>
                                     <source srcset="img/tg.webp" type="webp" />
-                                    <img src="img/tg.png" alt="tg" loading="lazy">
+                                    <img src="img/tg.png" type="png" alt="tg" loading="lazy">
                                 </picture>
                             </a>
                         </div>
@@ -1009,7 +1022,7 @@
                             <a href="https://www.youtube.com/">
                                 <picture>
                                     <source srcset="img/yt.webp" type="webp" />
-                                    <img src="img/yt.png" alt="yt" loading="lazy">
+                                    <img src="img/yt.png" type="png" alt="yt" loading="lazy">
                                 </picture>
                             </a>
                         </div>
@@ -1017,7 +1030,7 @@
                             <a href="https://discord.com/">
                                 <picture>
                                     <source srcset="img/discord.webp" type="webp" />
-                                    <img src="img/discord.png" alt="ds" loading="lazy">
+                                    <img src="img/discord.png" type="png" alt="ds" loading="lazy">
                                 </picture>
                             </a>
                         </div>
@@ -1029,7 +1042,7 @@
             <div class="footer__blur">
                 <picture>
                     <source srcset="img/footer.webp" type="webp" />
-                    <img src="img/footer.png" alt="footer" loading="lazy">
+                    <img src="img/footer.png" type="png" alt="footer" loading="lazy">
                 </picture>
             </div>
             <div class="footer__base">
